--- a/auth/package.json
+++ b/auth/package.json
@@ -24,7 +24,8 @@
     "pg-hstore": "2.3.2",
     "request": "^2.83.0",
     "sequelize": "^3.5.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
